Payment Card Workflow Implementation ~Joshua Ouma~

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": false,
             "tenant": "default",
-            "schemaUpdateMode": "Synchronize",
+            "schemaUpdateMode": "ForceSync",
             "usePublicURLFromServer": true
         } //,
         // {
